# movie-generator

./: .cflx.jsonc  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  REFACTORING_COMPLETE.md  WORKER_API_REFACTOR.md  WORKER_TESTING_GUIDE.md  complete_video.py  config-dialogue.yaml  config-metan.yaml  config-tsumugi.yaml  config-zundamon.yaml  download-voicevox.sh  generate_image.py  main.py  opencode.jsonc  package-lock.json  package.json  pb_schema.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test-config.yaml  test-content.txt  test-multilang.yaml  test-zundamon.yaml  test_skip.py  test_slide.py  test_video_render.py  tsumugi-demo-script.yaml
.serena/: project.yml
.serena/memories/: slide-generation-model.md
.wt/: .gitignore  setup
artifacts/remotion/: package.json  tsconfig.json
artifacts/remotion/src/: Root.tsx  VideoGenerator.tsx
assets/: 春日部つむぎ立ち絵素材.psd
assets/backgrounds/: README.md
assets/bgm/: README.md
config/: default.yaml  mcp-example.jsonc  multi-speaker-example.yaml  test-config.yaml  video-bg-test-config.yaml
config/characters/: metan.yaml
config/examples/: background-bgm-example.yaml  script-format-example.yaml
config/examples/scripts/: background-bgm-test.yaml  background-video-test.yaml  metan-demo.yaml  section-background-example.yaml  tsumugi-demo.yaml  zundamon-demo.yaml
docs/: ARCHITECTURE.md  CHARACTER_ASSET_GUIDE.md  CONFIGURATION.md  IMPLEMENTATION_SUMMARY.md  MCP_AGENT.md  MIGRATION.md  MULTILANG_FEATURE.md  POCKETBASE.md  PROJECT_SUMMARY.md  REMOTION_BEST_PRACTICES.md  SLIDE_PROMPT_EXAMPLES.md  VOICEVOX_SETUP.md  google-veo-3.1-api-report.md  kling-ai-api-report.md
openspec/: project.md
openspec-archive/changes/add-video-generator/: design.md  proposal.md
openspec/changes/add-config-fields/: design.md  tasks.md
openspec/changes/add-config-init-command/: proposal.md  tasks.md
openspec/changes/add-firecrawl-summary-quality-check/: proposal.md
openspec/changes/add-job-cancellation/: design.md  proposal.md  tasks.md
openspec/changes/add-llm-base-url-config/: design.md  proposal.md  tasks.md
openspec/changes/add-random-persona-selection/: design.md  proposal.md  tasks.md
openspec/changes/add-video-generator/: tasks.md
openspec/changes/add-web-service/: design.md  proposal.md  tasks.md
openspec/changes/align-retry-defaults/: tasks.md
openspec/changes/clean-web-compose-env-vars/: tasks.md
openspec/changes/optimize-slide-generation/: proposal.md  tasks.md
openspec/changes/refactor-cli-create-dedup/: tasks.md
openspec/changes/refactor-cli-generate-audio-dedup/: tasks.md
openspec/changes/refactor-cli-generate-pipeline/: tasks.md
openspec/changes/refactor-config-init-template/: tasks.md
openspec/changes/refactor-config-magic-number-constants/: tasks.md
openspec/changes/refactor-content-image-extraction/: proposal.md  tasks.md
openspec/changes/refactor-env-check-centralization/: tasks.md
openspec/changes/refactor-project-setup-remotion/: proposal.md  tasks.md
openspec/changes/refactor-remotion-composition-builder/: proposal.md  tasks.md
openspec/changes/refactor-remotion-render-params/: tasks.md
openspec/changes/refactor-script-generate-script-decompose/: proposal.md  tasks.md
openspec/changes/refactor-script-prompt-templates/: tasks.md
openspec/changes/refactor-slides-task-planning/: tasks.md
openspec/changes/refactor-web-api-utilities/: tasks.md
openspec/changes/refactor-web-tests-alignment/: tasks.md
openspec/changes/refactor-web-worker-modules/: design.md  proposal.md  tasks.md
openspec/changes/require-llm-model-config/: proposal.md  tasks.md
openspec/changes/standardize-path-constants/: tasks.md
openspec/changes/update-realtime-progress/: design.md  proposal.md  tasks.md
projects/tui-evolution/: project.yaml
remotion/: package-lock.json
remotion/src/: Root.tsx  Video.tsx  VideoGenerator.tsx  VideoPhrases.tsx  videoData.ts
scripts/: README.md  debug_eye_layers.py  generate_metan_assets.py  generate_slides.py  generate_tsumugi_assets.py  generate_zundamon_assets.py  inspect_psd.py  install_voicevox_linux.sh  install_voicevox_macos.sh  test_reading_quality.py
src/movie_generator/: __init__.py  cli.py  cli_pipeline.py  config.py  constants.py  exceptions.py  multilang.py  project.py
tests/: test_agent_loop.py  test_assets_downloader.py  test_background_bgm.py  test_character_animation.py  test_cli_pipeline.py  test_cli_subcommands.py  test_composition_backward_compat.py  test_config.py  test_config_init.py  test_config_validate.py  test_furigana.py  test_image_filtering.py  test_mcp_client.py  test_mcp_config.py  test_mcp_integration.py  test_multi_speaker.py  test_parser.py  test_persona_pool.py  test_persona_voice.py  test_phrases.py  test_project_root.py  test_prompt_templates.py  test_remotion_setup.py  test_retry.py  test_scene_range.py  test_script_generator.py  test_script_validate.py  test_script_with_agent.py  test_script_with_mcp.py  test_slide_task_planning.py  test_subtitle_color.py  test_template_generation.py  test_tool_converter.py  test_transition_integration.py  test_video_e2e.py  test_voicevox.py  test_worker_config.py
web/: .env.example  .gitignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  OPERATIONS.md  PROGRESS_IMPROVEMENTS.md  README.md  WORKER_IMPROVEMENTS.md  demo_progress.py  docker-compose.yml
web/api/: Dockerfile  config.py  firecrawl_client.py  main.py  models.py  pocketbase_client.py  pyproject.toml
web/api/routes/: api_routes.py  job_time.py  request_utils.py  web_routes.py
web/api/templates/: base.html  error.html  index.html  job.html
web/api/templates/partials/: job_status.html
web/config/: README.md  config.yaml  mcp.jsonc
web/pb_data/: data.db
web/tests/: README.md  __init__.py  conftest.py  test_api.py  test_firecrawl_quality.py  test_worker.py  test_worker_progress.py
web/worker/: Dockerfile  generator.py  main.py  movie_config_factory.py  pocketbase_client.py  pyproject.toml  settings.py  worker.py
(+288 files in other folders)
