[project]
name = "movie-generator"
version = "0.1.0"
description = "Generate YouTube slide videos from blog URLs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.14.0",
    "markdownify>=0.13.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "fugashi>=1.3.0",
    "unidic>=1.1.0",
    "cairosvg>=2.8.0",
    "pillow>=11.0.0",
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
movie-generator = "movie_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
