[project]
name = "movie-generator-web-api"
version = "0.1.0"
description = "FastAPI web interface for movie-generator"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.21",
    "httpx>=0.28.1",
    "slowapi>=0.1.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
